# colibre-halo-plotter

./: .gitignore  README.md  pyproject.toml
colibre_halo_plotter/: identify_massive.py  load_region.py  make_web_page.py  plot_halo.py  smooth_particles.py
colibre_halo_plotter/data/: index.html  main.js
examples/L012_m6/: config.yml
