[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "colibre_halo_plotter"
version = "0.0.1"
authors = [
  { name="John Helly", email="j.c.helly@durham.ac.uk" },
]
description = "Plot selected halos in COLIBRE and make a web page"
requires-python = ">=3.10"
dependencies = [
    "swiftsimio",
    "numpy",
    "matplotlib",
    "h5py",
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

#[project.urls]
#Homepage = ""
#Issues = ""

[tool.setuptools]
packages = [
    'colibre_halo_plotter',
]

